Feature(Presentation): Update style

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <link rel="shortcut icon"  href="presentation/css/images/favicon.png">
 	<title>eMAG Apps UI KIT</title>
 	<meta name="description" content="eMAG Apps UI KIT, a collection of visual elements and guidelines." />
+	
     <link rel="stylesheet" type="text/css" href="presentation/css/formater.css">
     <link rel="stylesheet" type="text/css" href="presentation/css/main.css">
     <link rel="stylesheet" type="text/css" href="presentation/css/scroll-btn.css">
     <link rel="stylesheet" type="text/css" href="presentation/css/media-queries.css">
+	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="presentation/js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="presentation/js/main.js"></script>
-
 </head>
 <body>
 <div id="header">
@@ -22,7 +23,7 @@
         <div class="red-line"></div>
     </div>
     <ul class="menu-top">
-        <li><a href="#homePage">Home</a></li>
+        <li><a href="#home_page">Home</a></li>
         <li><a href="#" class="active">About</a></li>
         <li><a href="http://emagtechlabs.github.io/emag-apps-ui-kit/demo" target="_blank">Demo</a></li>
         <li><a href="https://github.com/eMAGTechLabs/emag-apps-ui-kit" target="_blank">Github</a></li>
@@ -34,13 +35,11 @@
 		<div class="content">
             <p class="text-bigger">We've launched eMAG Apps UI KIT, a collection of visual elements<br> and guidelines we use for our internal applications.</p>
             <p class="text-big">The purpose of this collection is to help the community<br> to build amazing web applications easier and faster.</p><br>
-            <a href="#aboutPage" class="blue-button">FIND OUT MORE</a>
+            <a href="#about_page" class="blue-button">FIND OUT MORE</a>
              <span class="scroll-btn">
-                <a href="#">
-                    <span class="mouse">
-                        <span></span>
-                    </span>
-                </a>
+                <span class="mouse">
+					<span></span>
+				</span>
             </span>
         </div>
 	</div>
