Add facebook meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 	<title>eMAG Apps UI KIT</title>
 	<meta name="description" content="eMAG Apps UI KIT, a collection of visual elements and guidelines." />
 	
+	<meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="eMAG Apps UI KIT">
+	<meta property="og:description" content="eMAG Apps UI KIT, a collection of visual elements and guidelines.">
+	<meta property="og:image" content="presentation/css/images/eMAG_Apps_UI_KIT_facebook.png"/>
+	<meta property="og:url" content="http://emagtechlabs.github.io/emag-apps-ui-kit/">
+	<meta property="og:site_name" content="eMAG Apps UI KIT">
+	
     <link rel="stylesheet" type="text/css" href="presentation/css/formater.css">
     <link rel="stylesheet" type="text/css" href="presentation/css/main.css">
     <link rel="stylesheet" type="text/css" href="presentation/css/scroll-btn.css">
@@ -37,7 +45,7 @@
             <p class="text-big">The purpose of this collection is to help the community<br> to build amazing web applications easier and faster.</p><br>
             <a href="#about_page" class="blue-button">FIND OUT MORE</a>
              <span class="scroll-btn">
-                <span class="mouse">
+                <span class="mouse" title="Please scroll">
 					<span></span>
 				</span>
             </span>
