Add facebook meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="eMAG Apps UI KIT">
 	<meta property="og:description" content="eMAG Apps UI KIT, a collection of visual elements and guidelines.">
-	<meta property="og:image" content="presentation/css/images/eMAG_Apps_UI_KIT_facebook.png"/>
+	<meta property="og:image" content="http://emagtechlabs.github.io/emag-apps-ui-kit/presentation/css/images/eMAG_Apps_UI_KIT_facebook.png"/>
 	<meta property="og:url" content="http://emagtechlabs.github.io/emag-apps-ui-kit/">
 	<meta property="og:site_name" content="eMAG Apps UI KIT">
 	
