--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-    <link rel="shortcut icon"  href="presentation/css/images/favicon.png">
+    <link rel="shortcut icon"  href="presentation/css/images/favicon.png?v=1">
 	<title>eMAG Apps UI KIT</title>
 	<meta name="description" content="eMAG Apps UI KIT, a collection of visual elements and guidelines." />
 	
@@ -12,14 +12,14 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="eMAG Apps UI KIT">
 	<meta property="og:description" content="eMAG Apps UI KIT, a collection of visual elements and guidelines.">
-	<meta property="og:image" content="http://emagtechlabs.github.io/emag-apps-ui-kit/presentation/css/images/eMAG_Apps_UI_KIT_facebook.png"/>
+	<meta property="og:image" content="http://emagtechlabs.github.io/emag-apps-ui-kit/presentation/css/images/eMAG_Apps_UI_KIT_facebook.png?v=1"/>
 	<meta property="og:url" content="http://emagtechlabs.github.io/emag-apps-ui-kit/">
 	<meta property="og:site_name" content="eMAG Apps UI KIT">
 	
-    <link rel="stylesheet" type="text/css" href="presentation/css/formater.css">
-    <link rel="stylesheet" type="text/css" href="presentation/css/main.css">
-    <link rel="stylesheet" type="text/css" href="presentation/css/scroll-btn.css">
-    <link rel="stylesheet" type="text/css" href="presentation/css/media-queries.css">
+    <link rel="stylesheet" type="text/css" href="presentation/css/formater.css?v=1">
+    <link rel="stylesheet" type="text/css" href="presentation/css/main.css?v=1">
+    <link rel="stylesheet" type="text/css" href="presentation/css/scroll-btn.css?v=1">
+    <link rel="stylesheet" type="text/css" href="presentation/css/media-queries.css?v=1">
 	
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -29,8 +29,8 @@
 	})(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 	<!-- End Google Tag Manager -->
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script type="text/javascript" src="presentation/js/main.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js?v=1"></script>
+	<script type="text/javascript" src="presentation/js/main.js?v=1"></script>
 </head>
 <body>
 
@@ -41,7 +41,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div id="header">
     <div class="logo">
-        <img src="presentation/css/images/eMAG_Apps_UI_KIT_logo.svg" alt="eMAG Apps UI KIT logo">
+        <img src="presentation/css/images/eMAG_Apps_UI_KIT_logo.svg?v=1" alt="eMAG Apps UI KIT logo">
         <div class="red-line"></div>
     </div>
     <ul class="menu-top">
@@ -71,9 +71,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Aside from the elements provided by Bootstrap, it comes with its own set of unique<br> components, styling and useful plugins that you can use in your project.</p>
 		<p class="text-small"><em>Carefully built with:</em></p>
 		<div class="logos">
-			<span><img src="presentation/css/images/html_Logo.svg" alt="html logo"></span>
-			<span><img src="presentation/css/images/css_Logo.svg" alt="css logo"></span>
-			<span><img src="presentation/css/images/js_Logo.svg" alt="js logo"></span>
+			<span><img src="presentation/css/images/html_Logo.svg?v=1" alt="html logo"></span>
+			<span><img src="presentation/css/images/css_Logo.svg?v=1" alt="css logo"></span>
+			<span><img src="presentation/css/images/js_Logo.svg?v=1" alt="js logo"></span>
 		</div>
 		<p class="text-big">To find out more, check it on <a href="https://github.com/eMAGTechLabs/emag-apps-ui-kit" target="_blank"  class="effect-underline">GitHub</a> now!<br><em class="text-small">or</em></p>
 		<a href="http://emagtechlabs.github.io/emag-apps-ui-kit/demo" target="_blank" class="blue-button">VIEW DEMO</a>
