Generate demo html file for UI KIT

--- a/demo/_err_503.html
+++ b/demo/_err_503.html
@@ -1,16 +1,43 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <title>503 - eMAG Apps UI KIT</title>
-        <?php include_once "modules/_mod_meta.php"?>
-        <?php include_once "modules/_mod_top_include.php"?>
-    </head>
+        <meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="description" content="eMAG Apps UI KIT - The superfast, supersimple UI Kit" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="eMAG HX Team">
+
+<link rel="apple-touch-icon" href="../../apple-touch-icon.png">
+<link rel="icon" type="image/png" href="../../favicon.png">        <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
+<link rel="stylesheet" href="../dist/plugins/prism/prism.min.css">
+
+<!-- PHOTON main styles -->
+<link rel="stylesheet" href="../dist/css/main_style.min.css">
+
+<!--[if lt IE 9]>
+    <script src="../dist/js/lib/html5shiv.min.js"></script>
+    <script src="../dist/js/lib/respond.min.js"></script>
+<![endif]-->    </head>
     <body>
-        <?php include_once "modules/_mod_browser_upgrade.php"?>
-        
+        <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->        
         <!-- HEADER:Start -->
-            <?php include_once "modules/_mod_header_simple.php"?>
-        <!-- HEADER:End -->
+            <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">            
+            <a class="navbar-brand" href="javascript:void(0)">
+                <img src="img/logo-eMAG-apps-ui-kit.png" alt="Demo">
+            </a>            
+        </div><!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="main_navbar">
+            <h4 class="navbar-text">Demo</h4>
+            <ul class="nav navbar-nav navbar-right">                
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>        <!-- HEADER:End -->
 
         <!-- PAGE:Start -->
         
@@ -51,8 +78,13 @@
                 <!-- CONTENT:End -->
 
                 <!-- FOOTER:Start -->
-                    <?php include_once "modules/_mod_footer.php"?>
-                <!-- FOOTER:End -->                 
+                    <div id="main_footer" class="footer">
+    <div class="footer-inner text-center">
+        <div class="footer-content">
+            <span>Copyright &copy; 2011 - 2016 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+        </div>
+    </div>
+</div>                <!-- FOOTER:End -->                 
                 </div>
             </div>        
         <!-- PAGE:End -->
