--- a/demo/_plu_ajax_modals.html
+++ b/demo/_plu_ajax_modals.html
@@ -305,7 +305,7 @@
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/_plu_jqgrid.html">
-                                <span class="menu-text">JqGrid</span>
+                                <span class="menu-text">jQGrid</span>
                             </a>
                         </li>
                     </ul>
