--- a/demo/_plu_jqgrid.html
+++ b/demo/_plu_jqgrid.html
@@ -2,7 +2,7 @@
 <html lang="en" class="js">
 <head>
 
-        <title>JqGrid - eMAG Apps UI KIT</title>
+        <title>jQGrid - eMAG Apps UI KIT</title>
         <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="description" content="eMAG Apps UI KIT - The superfast, supersimple UI Kit" />
@@ -310,7 +310,7 @@
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/_plu_jqgrid.html">
-                                <span class="menu-text">JqGrid</span>
+                                <span class="menu-text">jQGrid</span>
                             </a>
                         </li>
                     </ul>
@@ -374,7 +374,7 @@
                         <div class="col-md-8 col-md-offset-2">
                             <div class="container-fluid">
                                 <p>eMAG Apps UI KIT</p>
-                                <p><b>JqGrid</b></p>
+                                <p><b>jQGrid</b></p>
                             </div>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
                         <div class="col-md-8 col-md-offset-2">
                             <div class="show-panel show-panel-example">
                                 <div class="show-panel-body">
-                                    <p><strong>Based on: </strong><a href="http://www.trirand.com/blog/" target="_blank" class="link">jQgrid Documentation</a></p>
+                                    <p><strong>Based on: </strong><a href="http://www.trirand.com/blog/" target="_blank" class="link">jQGrid Documentation</a></p>
 
                                     <table id="grid_table" class="table table-bordered"></table>
                                     <div id="grid_pager"></div>
