--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -306,7 +306,7 @@
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/_plu_jqgrid.html">
-                                <span class="menu-text">JqGrid</span>
+                                <span class="menu-text">jQGrid</span>
                             </a>
                         </li>
                     </ul>
