Demo(favicon): Fix parh for favicon

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,8 +9,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="eMAG HX Team">
 
-<link rel="apple-touch-icon" href="../../apple-touch-icon.png">
-<link rel="icon" type="image/png" href="../../favicon.png">    <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
+<link rel="apple-touch-icon" href="../apple-touch-icon.png">
+<link rel="icon" type="image/png" href="../favicon.png">    <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
 <link rel="stylesheet" href="../dist/plugins/prism/prism.min.css">
 
 <!-- PHOTON main styles -->
