--- a/demo/_plu_datetime.html
+++ b/demo/_plu_datetime.html
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="eMAG HX Team">
 
-<link rel="apple-touch-icon" href="../../apple-touch-icon.png">
-<link rel="icon" type="image/png" href="../../favicon.png">
+<link rel="apple-touch-icon" href="../apple-touch-icon.png">
+<link rel="icon" type="image/png" href="../favicon.png">
         <!-- PLUGIN: DateRangePicker -->
         <link rel="stylesheet" href="../dist/plugins/daterangepicker/daterangepicker.min.css">
 
