--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -349,6 +349,11 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/blank_page.html">
+                                <span class="menu-text">Blank page</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
