Fix(demo): Fix demo content

--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -392,7 +392,7 @@
                 <section class="pad-top-20">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Modals</strong></h4>
                                     <p><strong>Default styling:</strong></p>
@@ -461,7 +461,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <p><strong>Demo modals with different sizing:</strong></p>
                                     <div class="pad-sep-20">
@@ -492,7 +492,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <p><strong>Informational modals:</strong></p>
                                     <div class="pad-sep-20">
@@ -523,7 +523,7 @@
                 <section id="jsTooltips" class="pad-top-20">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Tooltips</strong></h4>
                                     <div class="pad-sep-40" data-showcase="example">
@@ -551,7 +551,7 @@
                 <section id="jsPopovers" class="pad-top-20">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Popovers</strong></h4>
                                     <div class="pad-sep-40" data-showcase="example">
@@ -568,7 +568,7 @@
                 <section id="jsUtilities" class="pad-top-20">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Utilities:</strong></h4>
                                     <p>A couple of HTML snippets with javascript enhancements:</p>
@@ -598,7 +598,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <p><strong>Checkboxes disguised as buttons:</strong></p>
                                     <p>Add
@@ -628,7 +628,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel show-panel-example">
+                            <div class="show-panel ">
                                 <div class="show-panel-body">
                                     <p><strong>Radio buttons disguised as regular buttons:</strong></p>
                                     <div class="pad-sep-20">
