--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -441,7 +441,9 @@
         <!-- SCRIPTS:Start -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write("<script src=\"../dist/js/lib/jquery-1.11.3.min.js\">"+"<"+"/script>")</script>
-        
+
+        <script src="../dist/plugins/tether/tether.min.js"></script>
+
         <script src="../dist/plugins/summernote/summernote.min.js"></script>
         
         <script src="../dist/js/main_script.min.js"></script>
