Feature(Layout): Added no results label to FancyTree

--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -492,7 +492,7 @@
         <!-- SCRIPTS:Start -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write("<script src=\"../dist/js/lib/jquery-1.11.3.min.js\">"+"<"+"/script>")</script>
-        
+
         <script src="../dist/js/lib/jquery-ui.1.11.4.min.js"></script>
         <script src="../dist/plugins/fancytree/fancytree.min.js"></script>
 
@@ -720,9 +720,8 @@
                 "</div>" +
             "</div>";
 
-
             $(document).ready(function () {
-
+                console.log('Ready, Captain!');
                 demoHelpers();  // Require demo_helpers.js
 
                 //Fancytree inits
@@ -741,6 +740,7 @@
                     modalOkLabel: 'Select',
                     textUnmatched: 'Hide unmatched',
                     textSelectHierarchy: 'Hierarchical multi-selection',
+                    noResults: 'No results found',
                     textSelected: 'selected',
                     searchPlaceholder: 'Search'
                 });
